fix estimator landing image on mobile screens

--- a/pages/estimator/styles.module.scss
+++ b/pages/estimator/styles.module.scss
@@ -50,8 +50,8 @@
   }
   .imageSmall {
     display: block;
-    width: 70vw;
-    max-width: 200px;
+    width: 90vw;
+    max-width: 300px;
   }
   .container button {
     margin-top: 30px;
